<resources>
    <string name="app_name">BookEazy</string>
    <string name="title_activity_login">Library</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="LoginPage">Login</string>
    <string name="usernamehint">Email Id</string>
    <string name="Passwordhint">Password</string>
    <string name="Button">Login</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="signUpName">Name</string>
    <string name="signUpEmail">E-mail Id</string>
    <string name="signUpMobile">Mobile Number</string>
    <string name="signUpPasswordConfirmHint">Confirm Password</string>
    <string name="signUpButton">SUBMIT</string>
    <string name="itemTextHolder">Item Text</string>
    <string name="mainActivityLogout">Logout</string>
    <string name="editStudent">Edit Student Info</string>
    <string name="editfaculty">Edit Faculty Info</string>
    <string name="editbook">Edit Book Info</string>
    <string name="signUpPage">SignUp</string>
    <string name="toolbarTitle">Bookeazy</string>
    <string name="resetPassword">Reset Password</string>
    <string name="newPasswordHint">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="resetPasswordBtn">Reset</string>
    <string name="issueStudent">Issue To Student</string>
    <string name="issueFaculty">Issue To Faculty</string>
    <string name="returnStudent">Return by Student</string>
    <string name="returnfaculty">Return By Faculty</string>
    <string name="Fine">Fine Amount</string>
    <string name="showBook">Show Books</string>
    <string name="showHistory">Show History</string>
    <string name="studentHistory">Students issue history</string>
    <string name="facultyHistory">Faculty issue history</string>
    <string name="showStudents">Show Students</string>
    <string name="showFaculty">Show Faculty</string>
    <string name="editaccountinfoTitle">Edit Account Info</string>
    <string name="confirmDetails">Enter Credentials To Proceed</string>
    <string name="search">Search</string>
    <string name="books_available">Books Available :</string>
    <string name="Declaration">This android application has been made purely as a part of an assessment only.\tIt has been developed for the sole purpose of fulfilling the requirements of the assessment.</string>
    <string name="Security_question">The security question(and answer) you set while signing up as a user(admin) in the app is used to reset your password, in case you forget it. Once set, these fields are not changeable or viewable. Hence, its important that you remember these, or you\'ll lose access to your account if you forget your password.  \t While setting security question/answer, all other fields are made non-accessible. It\'s important that you ensure you have entered correct details before pressing the \'proceed\' button.</string>
    <string name="Fine_amount">For Students: \t\t\n If the student returns a book within first two weeks(i.e 15 days maximum) after issuing the book and/or till todate of issue, he/she will not fined. Else, the amount of fine to be paid is Rs.10/- per day after the due date/return date(i.e 15 days after issue date).</string>
    <string name="Lost">Lost: \t\tIf a student/faculty loses a book, he/she needs to return a new book, which is of the latest edition(regardless of the edition issued). Fine amount will be charged as per the above mentioned rules only.</string>
    <string name="Rule1">1) List All the Books available at each class/grade/semester: \t\t\t\n  This application provides a menu option, \twhere the user(admin with respect to this app) can search books \t based on selecting class which the book belongs to/the student belongs to.</string>
    <string name="Rule_2">2) User Input to select a book which student wants for a specific time period. : \t\t\n  The user(admin w.r.t. this app)can issue/allot books to student based on the Bookid,Studentid \t\twith a specific time period i.e., fromdate,todate.</string>
    <string name="Rule_3">3) User Input to Return the book back to library. : \t\t\n  The user input(admin) can accept or return the book \t\t from students based on studentid,bookid.</string>
    <string name="Rule_4">4) Database should maintain count of each book available in the database which gets updated as and when books are allocated to students . :\t\t\n There is count which calculates the total number of book and as well as the books available which can be borrowed by the student.</string>
    <string name="Rule_5">5) Given a student name/id, program should display all books borrowed by Student. :\t\t\n  There is a menu option provided where we can serach a student by his id(studentid) which displays all the books borrowed by him.</string>
    <string name="Rule_6">6) Given a Book id/Name Program should display list of all students who has borrowed the book. :\t\t\n  There is a menu option provided to search Book based on bookid which returns all the students who has borrowed that particular boo.</string>
    <string name="Rule_7">7) Collect Fine at 10 Rs/Day for late return of Books. :\t\t\n  If the return date is more than 15days from date of issue,There is fine levied on the student while returning the book back.</string>
</resources>
